CHANGES

20200930        2020-09-30

            * Fix the tests with lates Perl::Tidy

20200412        2020-04-12

            * https://github.com/shlomif/Test-PerlTidy/issues/4
                * Set minimum version of Path::Tiny for its ->visit() method
                * Thanks to @eserte / SREZIC for the report

20200411        2020-04-11

            * https://github.com/shlomif/Test-PerlTidy/issues/3
                * Allow to pass extra options to Perl::Tidy::perltidy().
                * Thanks to @cxw42 for the suggestion!

20190402        2019-04-02

            * Fix https://github.com/shlomif/Test-PerlTidy/issues/2
                $VERSION overrided the one set by dzil
            * Made the "use" imports explicit.

20190309.001    2019-03-09

            * Fix for minimal Perl::Tidy version in META.yml
                See https://rt.cpan.org/Ticket/Display.html?id=128765 .

20190309        2019-03-09

            * Replace File::Finder (
                See https://rt.cpan.org/Ticket/Display.html?id=127453 . )
            * Try to fix test failures on MSWin32

20190305.001    2019-03-05

            Minimal versions of PerlTidy and Perl.
            Convert to Dist-Zilla.
            Thanks to MANWAR .

20190305    2019-03-05

            Fix test errors caused by new Perl::Tidy.
            Apply pull-requests from
            https://github.com/larryl/Test-PerlTidy/pulls . Thanks to
            @plicease .

20130104     2013-01-04

 -  Fix test errors caused by Perl::Tidy::perltidy v20121207
            no longer vertically aligning "=~".  Test::PerlTidy now
            requires Perl::Tidy::perltidy >= v20121207.

20120621     2012-06-21

 -  Fix errors caused by Perl::Tidy::perltidy now disallowing
            a scalar reference as the "stderr" option.

20120621     2012-06-21

 -  Some cleanup:

 1) MANIFEST was missing t/_perltidyrc.txt

 2) Updated build instructions in README

 3) Updated .gitignore

20110323     2011-03-23
