@@ -1,5 +1,5 @@
 name = Test-PerlTidy
-version = 20200930
+version = 20210709
 author = Shlomi Fish <shlomif@cpan.org>
 license = Perl_5
 copyright_holder = Edmund von der Burg
